--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ markdown: kramdown
 kramdown:
   input: GFM
 
-theme: starving-artist-jekyll-theme
+# theme: starving-artist-jekyll-theme
+remote_theme: "chrisanthropic/starving-artist-jekyll-theme"
   
 # Plugins
 gems:
